# planet-wars-haskell

./: .gitignore  Graphics.hs  Main.hs  MyBot.hs  PlanetWars.hs  PlanetWarsGraphics.hs  README.markdown  Widget.hs  planet-wars-client.cabal  planet-wars-client.hs
example_bots/: BullyBot.hs  DualBot.hs  ProspectorBot.hs  RageBot.hs  RandomBot.hs
